--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,7 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Test
-      run: mvn test
+      run: mvn clean test
 
     - name: Report
       uses: dorny/test-reporter@v1 
