--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,31 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.12</version>
+	    <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+	  <plugins>
+		  <plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-surefire-plugin</artifactId>
+			  <version>2.22.0</version>
+			  <dependencies>
+				  <dependency>
+					  <groupId>org.apache.maven.surefire</groupId>
+					  <artifactId>surefire-junit4</artifactId>
+					  <version>2.22.0</version>
+				  </dependency>
+			  </dependencies>
+			  <configuration>
+				  <includes>
+					  <include>**/*.java</include>
+				  </includes>
+			  </configuration>
+		  </plugin>
+	  </plugins>
+  </build>
 </project>
